fixing overlapping mobile chrome

--- a/_src/scss/blocks/_bodymove_iconpanel_maxsix.scss
+++ b/_src/scss/blocks/_bodymove_iconpanel_maxsix.scss
@@ -75,11 +75,8 @@
         }
         @include breakpoint(w-sm){
             grid-row: auto;
-            grid-template-areas:
-            "title"
-            "img"
-            "content";
-            grid-template-columns: 1fr;
+            display: flex;
+            flex-direction: column-reverse;
             overflow: visible;
             h2{
                 display: none;
@@ -89,6 +86,7 @@
                 line-height: inherit;
             }
             img{
+                height: 300px;
                 border-radius: 0;
                 opacity: 1;
             }
